# youtudown

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  test_youtudown.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri-full.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: commands.rs  main.rs
