[package]
name = "youtudown"
version = "0.1.0"
description = "4K YouTube视频下载器，支持自定义时间段下载"
authors = ["youtudown"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "signal", "time"] }
anyhow = "1.0"

[dependencies.windows]
version = "0.58"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader"
]

[target."cfg(target_os = \"linux\")".dependencies]
global-hotkey = "0.6"

[target."cfg(target_os = \"macos\")".dependencies]
global-hotkey = "0.6"

[target."cfg(target_os = \"windows\")".dependencies]
global-hotkey = "0.6"

[target."cfg(not(any(target_os = \"linux\", target_os = \"android\")))".dependencies]
global-hotkey = "0.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
